Trying to solve Mobile bottom menu not showing in viewport

--- a/styles/main.css
+++ b/styles/main.css
@@ -17,7 +17,7 @@ body{
 
 .background-video {
   width: 100%;
-  height: 100vh;
+  height: 100dvh;
   object-fit: cover;
   position: absolute;
   top: 0;
@@ -94,7 +94,7 @@ body{
 }
 @media (max-width:29em){
 .header-container{
-
+height: 100dvh;
 }
 .logo{order:1;
   width: 10rem;
